--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     name: Build and deploy Gatsby site
     runs-on: ubuntu-latest
     steps:
@@ -27,3 +27,29 @@ jobs:
         run: gatsby build
       - name: Verify build
         run: ls -la public
+      - name: Upload public folder as Package
+        uses: actions/upload-artifact@v3
+        with:
+          name: public-package
+          path: public 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download the public folder to deploy Job
+        uses: actions/download-artifact@v3
+        with:
+          name: public-package
+          path: public
+      - name: Copy the Public Folder to Ubuntu
+        uses: marcodallasanta/ssh-scp-deploy@v1.2.0
+        with:
+          local: 'public/*'
+          remote: '~/public/'
+          host: ${{secrets.REMOTE_HOST}}
+          user: ${{secrets.REMOTE_USER}}
+          key: ${{secrets.SERVER_SSH_KEY}}
+          ssh_options: -o StrictHostKeyChecking=no
+          pre_upload: sudo rm -rf /var/www/html/*
+          #post_upload: ls -la ~/public
+          post_upload: sudo mv ~/public/* /var/www/html/
