--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,13 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
-      - name: Install Project Dependencies
-        run: npm ci
+      #- name: Install Project Dependencies
+        #run: npm ci
       - name: Install Gatsby CLI
-        run: npm install -g gatsby-cli@2.12.34
+        #run: npm install -g gatsby-cli@2.12.34
+        run: npm install --location=global gatsby-cli
+      - name : Install Dependencies
+        run: npm install
       - name: Build
         run: gatsby build 
       - name: Verify build
