--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
         run: gatsby build 
       - name: Verify build
         run: ls -la public
-      - name: npm audit build
-        run: npm audit
+      #- name: npm audit build
+      #  run: npm audit
       - name: Upload public folder as Package
         uses: actions/upload-artifact@v3
         with:
@@ -60,3 +60,11 @@ jobs:
           pre_upload: sudo rm -rf /var/www/html/*
           #post_upload: ls -la ~/public
           post_upload: sudo mv ~/public/* /var/www/html/
+  npm-audit:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout the codebase
+        uses: actions/checkout@v3
+      - name: Security Component 
+        run: npm audit --jason > npm-audit-trail.json
