--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
   deploy:
     name: Deploy Gatsby site
     runs-on: ubuntu-latest
-    needs: build
+    needs: npm-audit
     steps:
       - name: Download the public folder to deploy Job
         uses: actions/download-artifact@v3
@@ -67,4 +67,4 @@ jobs:
       - name: Checkout the codebase
         uses: actions/checkout@v3
       - name: Security Component 
-        run: npm audit --jason > npm-audit-trail.json
+        run: npm audit --json > npm-audit-trail.json
