--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,4 +67,6 @@ jobs:
       - name: Checkout the codebase
         uses: actions/checkout@v3
       - name: Security Component 
-        run: npm audit --json > npm-audit-trail.json
+        run: |
+          npm --version
+          npm audit --json > npm-audit-trail.json
