--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,4 +69,4 @@ jobs:
       - name: Security Component 
         run: |
           npm --version
-          npm audit --json > npm-audit-trail.json
+          npm audit --json
