--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
-          cache: 'npm'
+          #cache: 'npm'
       #- name: Install Project Dependencies
         #run: npm ci
       - name: Install Gatsby CLI
